# agents-final-project

./: README.md  pyproject.toml  run_evaluation.py
agents/: multi_agent_variants.py  session.py  shell_interface.py  single_agent.py  tool_interface.py
agents/multi_agent/: __init__.py  coder.py  orchestrator.py  prompts.py  researcher.py  test_generator.py  tool_chat.py  utils.py
data/: agent_comparison.csv
data/multi_agent_logs/: agent_logs_multi.csv  summary.csv
data/multi_agent_logs/20251209_030453/: agent_log.jsonl  harness.py  reference_impl.py  solver.py  summary.json
data/multi_agent_logs/20251209_030646/: agent_log.jsonl  harness.py  reference_impl.py  solver.py  summary.json
data/multi_agent_no_researcher_logs/: agent_logs_multi.csv  summary.csv
data/multi_agent_no_researcher_no_tester_logs/: agent_logs_multi.csv  summary.csv
data/single_agent_logs/: agent_logs.csv  summary.csv
evaluation/: __init__.py  algotune_loader.py  batch  batch_multi_no_researcher_no_tester.yaml  benchmark.py  config.py  config.yaml  display.py  environment.py  evaluator.py  logging.py  minimal_algotune_base.py  tasks.yaml
scripts/: aggregate_logs.py  batch_config.example.yaml  batch_multi_full.yaml  batch_multi_no_researcher.yaml  batch_multi_no_researcher_no_tester.yaml  batch_single_agent.yaml  compare_agents.py  generate_paper_figures.py  log_utils.py  multi_agent_coder_only.yaml  multi_agent_full.yaml  multi_agent_no_researcher.yaml  multi_agent_no_tester.yaml  run_all_multi_agent_ablations.sh  run_all_variants.sh  run_batch.py
(+276 files in other folders)
